// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`views/OccupationsList renders empty list 1`] = `
<div>
  <ul
    class="css-1n9h91p"
    color="persianBlue"
  />
</div>
`;

exports[`views/OccupationsList renders experineces list 1`] = `
<div>
  <ul
    class="css-1n9h91p"
    color="persianBlue"
  >
    <li
      class="css-pxl19e"
      color="black"
    >
      Javascript
    </li>
    <li
      class="css-pxl19e"
      color="black"
    >
      Java
    </li>
  </ul>
</div>
`;

exports[`views/OccupationsList renders experineces list with button 1`] = `
<div>
  <ul
    class="css-1n9h91p"
    color="persianBlue"
  >
    <li
      class="css-1mh231o"
      color="black"
    >
      Javascript
    </li>
    <li
      class="css-1mh231o"
      color="black"
    >
      Java
    </li>
  </ul>
</div>
`;
